Make sure not to wrap the ID number.

--- a/default-admin-posts-order.css
+++ b/default-admin-posts-order.css
@@ -1,3 +1,7 @@
 th.manage-column.column-id {
     width: 4em;
 }
+
+td.id.column-id {
+	white-space: nowrap;
+}
